# never_coercion

./: CHANGELOG.md  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: dependabot-approve.yml  rust-build-release-binaries.yml  rust-stability.yml  rust.yml
doc/: pre-RFC.md  references.md
examples/: HasAssocType.rs  OptionResult.rs  always.rs  conversion.rs  poll.rs
